deployments/baseline-kubernetes/resources/cluster/permission.yaml
# This yaml creates the namespace for Primus applications and configures the needed permissions.

apiVersion: v1
kind: Namespace
metadata:
  name: primus
