deployments/baseline-kubernetes/resources/cluster/networking.yaml
# This yaml configures the needed network settings to expose Primus UI.

apiVersion: v1
kind: Namespace
metadata:
  name: primus-networking
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: primus-app-proxy-deployment
  namespace: primus-networking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: primus-app-proxy
  template:
    metadata:
      labels:
        app: primus-app-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 7889
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config
          configMap:
            name: primus-app-proxy-configmap
---

apiVersion: v1
kind: Service
metadata:
  name: primus-app-proxy-service
  namespace: primus-networking
spec:
  selector:
    app: primus-app-proxy
  ports:
    - name: primus-app-proxy
      protocol: TCP
      port: 7889
      targetPort: 7889
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: primus-networking
  annotations:
    kubernetes.io/ingress.class: "ambassador"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/primus/app"
            backend:
              service:
                name: primus-app-proxy-service
                port:
                  number: 7889
---
